侦测优化，内存优化

--- a/bin/conf/app.conf
+++ b/bin/conf/app.conf
@@ -16,9 +16,10 @@ adminPassword = "Yu7585200"
   cameraFPS = 20
   recordSavePath = "/home/www/record"
   recordSaveName = "camera"
-  recordWithOutCheck = true
-  recordCheckHasFace = true
+  recordWithOutCheck = false
+  recordCheckHasFace = false
   recordCheckHasMotion = true
+  checkerDrawMark = false
   recordStartCheckIntervalSeconds = 3
   recordStopByCheckFailMaxTimes = 40
   recordWriteNewFileIntervalMinutes = 10
